--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-axe",
-  "version": "3.3.0",
+  "name": "dibs-react-axe",
+  "version": "3.3.1",
   "description": "Dynamic accessibility analysis for React using axe-core",
   "main": "index.js",
   "scripts": {
